--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,17 +5,17 @@
     background-color: rgb(40, 40, 40);
     color: #fff;
     z-index: 10;
-    transition: .3s ease;
     top: 0;
     left: 0;
     box-shadow: 1px 2px 5px rgb(0, 0, 0);
+    transition: .5s ease;
 }
 
 .header.light {
     background-color: rgb(31 70 186);
 }
 
-.theme {
+.mobileInfo {
     position: relative;
     height: 100%;
     display: flex;
@@ -25,6 +25,7 @@
     z-index: 15;
     padding: 20px 0px;
     box-sizing: border-box;
+    margin-left: auto;
 }
 
 .burger {
@@ -87,10 +88,11 @@
 
 @keyframes rotateImg {
     from {
-        transform: rotate(0deg);
-    }
-    to {
         transform: rotate(180deg);
+    }
+
+    to {
+        transform: rotate(360deg);
     }
 }
 
@@ -101,6 +103,7 @@
     animation-duration: 1s;
     animation-name: '';
     transition: .5s ease;
+    cursor: pointer;
 }
 
 .settingImg img {
@@ -108,9 +111,8 @@
     width: auto;
 }
 
-.headerBody, 
-.links {
-    transition: .5s ease;
+.headerBody {
+    height: 100%;
 }
 
 .links {
@@ -150,13 +152,12 @@
         display: none;
     }
 
-
     .headerBody {
         display: flex;
     }
 
     .links {
-        width: 50%;
+        width: auto;
         position: relative;
         top: 0;
         flex-direction: row;
@@ -164,13 +165,13 @@
         padding: 0;
     }
 
+    .links.active {
+        box-shadow: none;
+    }
+
     .link {
         width: auto;
         margin-right: 30px;
         justify-content: left;
-    }
-
-    .theme {
-        margin-left: auto;
     }
 }
