--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -47,6 +47,8 @@
 .block {
     background-color: rgb(22, 22, 22);
     box-sizing: border-box;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 
 .wrap.light .block,
