--- a/src/components/MyModal/MyModal.module.css
+++ b/src/components/MyModal/MyModal.module.css
@@ -10,9 +10,9 @@
 }
 
 .modal.active {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    /* justify-content: center;
+    align-items: center; */
 }
 
 .modalContent {
@@ -24,6 +24,9 @@
     color: #fff;
     box-sizing: border-box;
     position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal.light {
